k8s/api/api_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: pfe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: tniauronis/api:v15
          imagePullPolicy: Always

          ports:
            - containerPort: 8000

          volumeMounts:
            - name: images-storage
              mountPath: /images_storage

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 6

          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"

      volumes:
        - name: images-storage
          hostPath:
            path: /home/mario/pfe-fast-data/database-pfe/images_storage
            type: DirectoryOrCreate
