k8s/api/api_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-2d-service
  namespace: pfe
spec:
  selector:
    app: api-2d
  ports:
  - port: 8000
    targetPort: 8000
  type: ClusterIP
