k8s/api/api_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-2d-ingress
  namespace: pfe
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  tls:
    - hosts:
        - api.exemple.com
      secretName: api-2d-tls-cert
  rules:
    - host: api.exemple.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-2d-service
                port:
                  number: 8000
